Add poetry to docker image and add linting.

--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -29,3 +29,5 @@ jobs:
         run: poetry install -v
       - name: Test docker image
         run: make test
+      - name: Lint python code
+        run: make lint
