--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,25 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+pylama = "^8.4.1"
 
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.1.3"
 docker = "^6.0.0"
 pytest-xdist = "^2.5.0"
+black = "^22.8.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+# set black line length to 120
+[tool.black]
+line-length = 120
+
+# set pylama line length to 120
+[tool.pylama]
+linters = "pycodestyle,pyflakes,pydocstyle"
+[tool.pylama.pycodestyle]
+max_line_length = 120
