Install poetry outside user home directory.

--- a/datascience-notebook/Dockerfile
+++ b/datascience-notebook/Dockerfile
@@ -6,6 +6,9 @@ RUN conda install nb_conda_kernels nb_conda
 RUN pip install --upgrade jupyterlab-git
 
 # instal poetry
+
+ENV POETRY_HOME=/etc/poetry
+
 RUN curl -sSL https://install.python-poetry.org | python3 -
 # add poetry to path
-ENV PATH="${HOME}/.local/bin:${PATH}"
+ENV PATH="${POETRY_HOME}/bin:${PATH}"
