Install poetry outside user home.

--- a/datascience-notebook/Dockerfile
+++ b/datascience-notebook/Dockerfile
@@ -9,6 +9,12 @@ RUN pip install --upgrade jupyterlab-git
 
 ENV POETRY_HOME=/etc/poetry
 
+# echo current user
+
+USER root
+
 RUN curl -sSL https://install.python-poetry.org | python3 -
 # add poetry to path
 ENV PATH="${POETRY_HOME}/bin:${PATH}"
+
+USER jovyan
