Add Docker file and tests for python test environment image for usage in jenkins.

--- a/.github/workflows/build-test-datascience-notebook.yaml
+++ b/.github/workflows/build-test-datascience-notebook.yaml
@@ -28,6 +28,6 @@ jobs:
       - name: Install dependencies
         run: poetry install -v
       - name: Test docker image
-        run: make test
+        run: make test dir=datascience-notebook
       - name: Lint python code
         run: make lint
