--- a/.github/workflows/publish-datascience-notebook.yaml
+++ b/.github/workflows/publish-datascience-notebook.yaml
@@ -31,7 +31,7 @@ jobs:
       - name: Build docker image
         run: docker build -t ${{ matrix.image }}:latest ${{ matrix.image }}/.
       - name: Test docker image
-        run: make test
+        run: make test dir=${{ matrix.image }}
       - name: Publish docker image to github packages
         run: |
           echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
