--- a/smee-proxy/Dockerfile
+++ b/smee-proxy/Dockerfile
@@ -1,4 +1,5 @@
 FROM node:lts-alpine
+RUN apk update && apk add --no-cache bash
 RUN npm install -g smee-client-proxy
 ENTRYPOINT ["smee"]
 CMD ["--help"]
