Smee: add curl.

--- a/smee-proxy/Dockerfile
+++ b/smee-proxy/Dockerfile
@@ -1,5 +1,5 @@
 FROM node:lts-alpine
-RUN apk update && apk add --no-cache bash
+RUN apk update && apk add --no-cache bash curl
 RUN npm install -g smee-client-proxy
 ENTRYPOINT ["smee"]
 CMD ["--help"]
