Add cli toolbox container.

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        image: ['datascience-notebook', 'python-test-environment', 'smee-proxy', 'jenkins-inbound-agent']
+        image: ['datascience-notebook', 'python-test-environment', 'smee-proxy', 'jenkins-inbound-agent', 'toolbox']
     steps:
       - name: Checkout
         uses: actions/checkout@v2
