--- a/smee-proxy/Dockerfile
+++ b/smee-proxy/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:lts-alpine
 RUN apk update && apk add --no-cache bash curl
-RUN npm install -g smee-client-proxy==1.3.0
+RUN npm install -g smee-client-proxy
 
 # Expose port for health check
 EXPOSE 3000
