--- a/smee-proxy/Dockerfile
+++ b/smee-proxy/Dockerfile
@@ -1,4 +1,5 @@
 FROM node:lts-alpine
+USER root
 RUN apk update && apk add --no-cache bash curl
 RUN npm install -g smee-client-proxy
 # Expose port for health check
