--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        image: ['datascience-notebook', 'python-test-environment', 'smee-proxy', 'jenkins-inbound-agent']
+        image: ['python-test-environment', 'smee-proxy', 'jenkins-inbound-agent', 'node-chrome']
     steps:
       - name: Checkout
         uses: actions/checkout@v2
